# skewbot

./: .env.example  .gitignore  README.md  setup.cfg  test_gif.py
skewbot/: __main__.py  bot.py  image.py  utils.py
