[metadata]
name = discord-italics-bot
author = "OdielDomanie"
version = 0.2
description = Discord bot that italicizes images.
url = https://github.com/OdielDomanie/skewbot
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: POSIX

[options]
python_requires = >=3.8
install_requires =
    discord.py @ git+https://github.com/Rapptz/discord.py.git
    numpy
    Pillow
    python-dotenv

[options.packages.find]
where = skewbot
